# aws-sam-terraform-spikes

serverless_sam_tf/: pyproject.toml
serverless_sam_tf/infrastructure/: main.tf  version.tf
serverless_sam_tf/src/app/: app.py
terraform_sam/: pyproject.toml
terraform_sam/sam-app/: samconfig.toml  template.yaml
terraform_sam/sam-app/infrastructure/: main.tf
