[tool.poetry]
name = "serverlesst-tf"
version = "0.1.0"
description = ""
authors = ["reikje <reik.schatz@gmail.com>"]
readme = "README.md"
packages = [{include = "serverlesst"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aws-lambda-powertools = "^2.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
boto3 = "^1.28.57"
ruff = "^0.0.291"

[tool.ruff]
select = ["ANN", "E", "F", "N", "PYI", "PLE", "Q", "RUF", "SIM", "T20"]
ignore = ["E501"]
exclude = [
    "tests", "singleton.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
