[tool.poetry]
name = "terrasam"
version = "0.1.0"
description = ""
authors = ["reikje <reik.schatz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
